--- a/assets/stylesheets/sass/components/_download.scss
+++ b/assets/stylesheets/sass/components/_download.scss
@@ -2,7 +2,7 @@
 	background: #191919;
 	color: #fff;
 	text-align: center;
-	padding: $unit6 0 $unit4 0;
+	padding: $unit6 0;
 	@at-root {
 		#{&}__ {
 			@at-root {
