--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -637,7 +637,7 @@ textarea {
   background: #191919;
   color: #fff;
   text-align: center;
-  padding: 48px 0 32px 0; }
+  padding: 48px 0; }
   .download__wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -692,7 +692,7 @@ textarea {
         margin-bottom: 24px; } }
 
 .global-footer {
-  background: #191919;
+  background: #333;
   padding: 24px 0;
   text-align: center;
   color: #fff; }
