--- a/assets/stylesheets/sass/main.scss
+++ b/assets/stylesheets/sass/main.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/sanitize.css/lib/sanitize.scss';
+@import '../../../node_modules/sanitize.css/sanitize.css';
 @import 'config';
 @import 'components/global-header';
 @import 'components/about';
