--- a/assets/stylesheets/sass/components/_scale.scss
+++ b/assets/stylesheets/sass/components/_scale.scss
@@ -1,6 +1,6 @@
 .scale {
-	background: #fff;
-	color: #191919;
+	//background: #fff;
+	border-bottom: 1px solid #BFBFBF;
 	display: flex;
 	align-items: center;
 	@at-root {
