--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -33,7 +33,6 @@
   text-align: center; }
 
 .global-header {
-  background: #212121;
   color: #fff;
   padding: 32px 0;
   display: -webkit-box;
@@ -52,11 +51,10 @@
   .global-header__contact {
     margin-right: 16px; }
     .global-header__contact:before {
-      background: url(../../images/email.svg) no-repeat 0 0;
-      top: 2px; }
+      background: url(../../images/email.svg) no-repeat 0 0; }
   .global-header__twitter:before {
     background: url(../../images/twitter.png) no-repeat 0 0;
-    top: 4px; }
+    top: 1px; }
   @media (max-width: 960px) {
     .global-header {
       margin: 0 32px; } }
@@ -80,8 +78,7 @@
     position: relative; }
 
 .about {
-  background: #1A67C8;
-  color: #fff;
+  border-bottom: 1px solid #BFBFBF;
   position: relative;
   padding-bottom: 48px; }
   .about:before {
@@ -91,19 +88,25 @@
     top: 0;
     width: 100%;
     height: 341px;
-    background: #212121;
     z-index: 0;
     display: block; }
   .about__capture {
     max-width: 100%;
     height: auto;
     position: relative;
-    margin-bottom: 32px;
+    margin-bottom: 16px;
     display: block; }
-  @media (max-width: 960px) {
-    .about__title {
-      text-align: left;
-      margin: 0 32px; } }
+  .about__title {
+    font-size: 28px; }
+    @media (max-width: 960px) {
+      .about__title {
+        text-align: left;
+        margin: 0 32px; } }
+  .about__app-store {
+    display: block;
+    width: 162px;
+    height: 48px;
+    margin: 0 auto; }
   @media (max-width: 450px) {
     .about {
       padding-top: 24px;
@@ -116,8 +119,7 @@
         margin-top: -24px; } }
 
 .scale {
-  background: #fff;
-  color: #191919;
+  border-bottom: 1px solid #BFBFBF;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -324,9 +326,8 @@
   transition: 0.7s cubic-bezier(0.165, 0.84, 0.44, 1); }
 
 .tools {
-  background: #6E6E6E;
-  color: #fff;
-  padding-bottom: 32px; }
+  padding-bottom: 40px;
+  border-bottom: 1px solid #BFBFBF; }
   .tools__capture {
     background: url(../../images/mock004.png) no-repeat 50% 100%;
     background-size: 960px 170px;
@@ -379,9 +380,7 @@
       margin-bottom: 16px; } }
 
 .stylus {
-  background: #999;
-  color: #fff;
-  padding: 64px 0; }
+  padding: 40px 0 64px 0; }
   .stylus__title {
     margin-bottom: 48px; }
   .stylus__img {
@@ -402,7 +401,7 @@
   background: #191919;
   color: #fff;
   text-align: center;
-  padding: 48px 0; }
+  padding: 40px 0; }
   .download__wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -412,8 +411,7 @@
             justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center;
-    margin-bottom: 32px; }
+            align-items: center; }
   .download__title {
     font-size: 40px;
     font-weight: 500;
@@ -490,7 +488,8 @@
 body {
   font-size: 16px;
   font-family: "Helvetica Neue", sans-serif;
-  background: #212121; }
+  background: #f1f1f1;
+  color: #191919; }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
