--- a/assets/stylesheets/sass/main.scss
+++ b/assets/stylesheets/sass/main.scss
@@ -13,7 +13,8 @@
 body {
 	font-size: 16px;
 	font-family: "Helvetica Neue", sans-serif;
-	background: #212121;
+	background: #f1f1f1;
+	color: #191919;
 }
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
