--- a/assets/stylesheets/sass/components/_about.scss
+++ b/assets/stylesheets/sass/components/_about.scss
@@ -1,6 +1,6 @@
 .about {
 	//background: #1A67C8;
-	border-bottom: 1px solid #BFBFBF;
+	//border-bottom: 1px solid #BFBFBF;
 	position: relative;
 	padding-bottom: $unit6;
 	&:before {
