--- a/assets/stylesheets/sass/components/_global-footer.scss
+++ b/assets/stylesheets/sass/components/_global-footer.scss
@@ -16,7 +16,7 @@
 				#{&}company {
 					font-weight: 200;
 					font-size: 14px;
-					color: #777;
+					color: #BFBFBF;
 					display: block;
 					font-style: normal;
 				}
@@ -24,7 +24,7 @@
 					height: 12px;
 					width: auto;
 					margin:0 4px;
-					opacity: .4;
+					opacity: .2;
 					position: relative;
 					bottom: 1px;
 				}
