--- a/assets/stylesheets/sass/main.scss
+++ b/assets/stylesheets/sass/main.scss
@@ -17,7 +17,7 @@ html,body {
 body {
 	font-size: 16px;
 	font-family: "Helvetica Neue", sans-serif;
-	background: #f1f1f1;
+	background: url(../../images/bg.svg) repeat 0 0 #fff;
 	color: #191919;
 }
 h1, h2, h3, h4, h5, h6 {
