--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -494,7 +494,8 @@ body {
   font-size: 16px;
   font-family: "Helvetica Neue", sans-serif;
   background: url(../../images/bg.svg) repeat 0 0 #fff;
-  color: #191919; }
+  color: #191919;
+  margin: 0; }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
