--- a/assets/stylesheets/sass/main.scss
+++ b/assets/stylesheets/sass/main.scss
@@ -19,6 +19,7 @@ body {
 	font-family: "Helvetica Neue", sans-serif;
 	background: url(../../images/bg.svg) repeat 0 0 #fff;
 	color: #191919;
+	margin: 0;
 }
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
