--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -559,6 +559,8 @@ textarea,
     position: relative; }
 
 .about {
+  color: #fff;
+  background: #191919;
   position: relative;
   padding-bottom: 48px; }
   .about:before {
@@ -568,6 +570,7 @@ textarea,
     top: 0;
     width: 100%;
     height: 341px;
+    background: url(../../images/bg.svg) repeat 0 0 #fff;
     z-index: 0;
     display: block; }
   .about__capture {
@@ -860,6 +863,7 @@ textarea,
       margin-bottom: 16px; } }
 
 .stylus {
+  border-bottom: 1px solid #BFBFBF;
   padding: 40px 0 64px 0; }
   .stylus__title {
     margin-bottom: 48px; }
