--- a/assets/stylesheets/sass/components/_about.scss
+++ b/assets/stylesheets/sass/components/_about.scss
@@ -1,6 +1,8 @@
 .about {
 	//background: #1A67C8;
 	//border-bottom: 1px solid #BFBFBF;
+	color: #fff;
+	background: #191919;
 	position: relative;
 	padding-bottom: $unit6;
 	&:before {
@@ -10,7 +12,7 @@
 		top: 0;
 		width: 100%;
 		height: 341px;
-		//background: #212121;
+		background: url(../../images/bg.svg) repeat 0 0 #fff;
 		z-index: 0;
 		display: block;
 	}
