--- a/assets/stylesheets/sass/components/_download.scss
+++ b/assets/stylesheets/sass/components/_download.scss
@@ -10,6 +10,7 @@
 					display: flex;
 					justify-content: center;
 					align-items: center;
+					margin-bottom: $unit6;
 				}
 				#{&}title {
 					font-size: 40px;
