--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -559,20 +559,9 @@ textarea,
     position: relative; }
 
 .about {
-  color: #fff;
-  background: #191919;
+  border-bottom: 1px solid #BFBFBF;
   position: relative;
   padding-bottom: 48px; }
-  .about:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 341px;
-    background: url(../../images/bg.svg) repeat 0 0 #fff;
-    z-index: 0;
-    display: block; }
   .about__capture {
     max-width: 100%;
     height: auto;
@@ -895,7 +884,8 @@ textarea,
             justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    margin-bottom: 48px; }
   .download__title {
     font-size: 40px;
     font-weight: 500;
@@ -955,7 +945,6 @@ textarea,
     height: 12px;
     width: auto;
     margin: 0 4px;
-    opacity: .2;
     position: relative;
     bottom: 1px; }
   @media (max-width: 960px) {
